<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_createLibrary"
            android:icon="@drawable/ic_add"
            android:title="@string/createlabel" />

        <item
            android:id="@+id/nav_addBookLog"
            android:icon="@drawable/ic_add"
            android:title="Add Booklog" />

        <item
            android:id="@+id/nav_shareLibrary"
            android:icon="@drawable/ic_add"
            android:title="Share Library" />

<!--        <item-->
<!--            android:id="@+id/nav_createSeries"-->
<!--            android:icon="@drawable/ic_add"-->
<!--            android:title="Add Series" />-->

        <item
            android:id="@+id/nav_addNewMedia"
            android:icon="@drawable/ic_add"
            android:title="@string/label_new_media" />
            
    </group>
</menu>