<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNewMedia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnNewBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_book" />

        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_game" />

        <Button
            android:id="@+id/btnNewMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_movie" />

        <Button
            android:id="@+id/btnNewSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_series" />

    </LinearLayout>
</FrameLayout>