<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.partnersincode.optimedia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.partnersincode.optimedia.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.partnersincode.optimedia.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_createLibrary"
        android:name="com.example.partnersincode.optimedia.ui.createLibrary.CreateLibrary"
        android:label="@string/createlabel"
        tools:layout="@layout/create_library_fragment" />

    <fragment
        android:id="@+id/nav_createAuthor"
        android:name="com.example.partnersincode.optimedia.ui.createAuthor"
        android:label="Author"
        tools:layout="@layout/fragment_create_author" />
    <fragment
        android:id="@+id/nav_manageAuthors"
        android:name="com.example.partnersincode.optimedia.ui.manageAuthors"
        android:label="Manage Authors"
        tools:layout="@layout/fragment_manage_authors" />
    <fragment
        android:id="@+id/nav_createBook"
        android:name="com.example.partnersincode.optimedia.ui.createBook"
        android:label="Create Book"
        tools:layout="@layout/fragment_create_book" />
</navigation>