<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.createSeriesLog" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMovie"
                style="@style/txtHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="[Title]" />

            <TextView
                android:id="@+id/txtGameGenre"
                style="@style/txtSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="[Genre]" />

            <TextView
                android:id="@+id/txtLink"
                style="@style/txtSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="[Link]" />

            <Switch
                android:id="@+id/switchSLogFavourite"
                style="@style/txtSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/favourite"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/switchSLogStarted"
                style="@style/txtSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/started"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/switchSLogComplete"
                style="@style/txtSubHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/completed"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/txtSLogRecord"
                style="@style/txtHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_season_and_episode" />

            <EditText
                android:id="@+id/edtTxtSLSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/lbl_season" />

            <EditText
                android:id="@+id/edtTxtSLogEpisode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/lbl_episode" />

            <EditText
                android:id="@+id/edtTxtSLogTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/lbl_timestamp"
                android:inputType="time" />

            <EditText
                android:id="@+id/edtTxtSLogNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/lbl_note"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnAddSeriesLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetLeft="16dp"
                android:insetRight="16dp"
                android:text="@string/addbtn"
                app:backgroundTint="@color/movie_series_theme"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSeriesLog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>